# indexer-blockdata-rs

./: .gitignore  ACTIVE_ORDERS_COMPLETE.md  ACTIVE_ORDERS_DB_DESIGN.md  ACTIVE_ORDERS_FINAL_REPORT.md  ACTIVE_ORDERS_FINAL_STATUS.md  ACTIVE_ORDERS_HONEST_PROGRESS.md  ACTIVE_ORDERS_IMPLEMENTATION.md  ACTIVE_ORDERS_ITERATION_SUMMARY.md  ACTIVE_ORDERS_PROGRESS.md  ACTIVE_ORDER_QUERY_DESIGN.md  AI_STATE.yaml  ALL_BUGS_FIXED.md  API_ROUTES.md  BALANCE_ENFORCEMENT_MIGRATION.md  BALANCE_MIGRATION_STATUS.md  BALANCE_QUERY_ARCHITECTURE.md  CODE_QUALITY_RULES.md  Cargo.toml  DEPOSIT_WITHDRAW_SIMPLIFIED.md  DETERMINISM_AUDIT.md  DEVELOPMENT.md  DISRUPTOR_REFACTORING.md  E2E_TESTING_GUIDE.md  E2E_TEST_ANALYSIS.md  E2E_TEST_SUCCESS.md  EMERGENCY_STATUS.md  ENFORCED_API_COMPLETE.md  ENFORCED_BALANCE_COMPLETE.md  EXTERNAL_SYMBOL_MAP.md  FINAL_STATUS.md  GIT_CLEANUP.md  HYBRID_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  ITERATION_1_COMPLETE.md  LEDGER_INTEGRATION_PLAN.md  LICENSE  MATCH_ENGINE_REFACTOR_COMPLETE.md  MORNING_STATUS_REPORT.md  MV_IMPLEMENTATION_PLAN.md  MV_TEST_RESULTS.md  (+60 more)
config/: config.yaml  dev.yaml  order_history_config.yaml  prod.yaml  settlement_config.yaml  test.yaml  ubscore_config.yaml
docs/: AERON_USAGE.md  APP_CRASH_BEFORE_BATCH.md  ARCHITECTURE_MESSAGE_QUEUE.md  ARCH_ALIGNMENT.md  ARCH_ALIGNMENT_STARROCKS.md  ATOMIC_SETTLEMENT_COMPLETE.md  AUTO_GO_TRACKER.md  BALANCE_TEST_COVERAGE.md  BATCH_ATOMICITY_EXPLAINED.md  BATCH_FAILURE_RECOVERY.md  BATCH_PERFORMANCE_ANALYSIS.md  CENTRIFUGO_HTTP_GUIDE.md  CLEANUP_ZMQ_PLAN.md  DEBUG_LOGGING.md  DELIVERY_SUMMARY.md  DEPOSIT_FLOW_STATUS.md  DEPOSIT_ISSUE.md  DEPOSIT_WITHDRAW_ARCHITECTURE.md  DEPOSIT_WITHDRAW_QUICKSTART.md  E2E_TEST_DEBUG.md  E2E_TEST_FIXES_SUMMARY.md  E2E_VICTORY_SUMMARY.md  EFFICIENT_BALANCE_QUERIES.md  ENGINE_OUTPUT_REFACTOR.md  EVENT_SAMPLING_GUIDE.md  FAN_IN_SERIALIZATION.md  FINAL_COMPLETION_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_STATUS.md  FINISHING_EVERYTHING.md  FUNDING_ACCOUNT_DESIGN.md  GATEWAY_INGRESS.md  GHOST_MONEY_HANDLING.md  HANDOVER_NOTES.md  HONEST_FINAL_STATUS.md  HYBRID_SETTLEMENT_APPROACH.md  INTERNAL_TRANSFER_50_ITERATIONS_COMPLETE.md  INTERNAL_TRANSFER_API.md  INTERNAL_TRANSFER_ARCH_CORRECT.md  INTERNAL_TRANSFER_AUDIT_REPORT.md  (+97 more)
examples/: aeron_hot_path.rs  centrifugo_push_ws.rs  disruptor_demo.rs  internal_transfer_demo.rs  redpanda_concurrency_test.rs  redpanda_concurrency_test2.rs  redpanda_latency_test.rs  s3_service_demo.rs  scylla_demo.rs  simple_ledger.rs  tigerbeetle_demo.rs  user_data_generator.rs
schema/: active_orders.cql  add_balance_mv.cql  balance_ledger.cql  internal_transfer.cql  order_history_schema.cql  settlement_schema.cql  settlement_unified.cql  starrocks_schema.sql  transfer.cql  user_trades.cql
scripts/: auto_test.sh  create_starrocks_routine_load.sh  demo_internal_transfer.sh  init_order_history_schema.sh  init_scylla.sh  init_starrocks.sh  manual_test.sh  mmap_durability_test.sh  setup_tigerbeetle.sh  stress_test_aeron.sh  test_atomic_settlement.sh  test_full_e2e_with_orders.sh  test_order_history_e2e.sh  test_order_history_e2e_with_data.sh  test_scenario_trade.sh  test_step_by_step.sh  (+2 more)
(+176 files in other folders)
