[package]
name = "indexer-blockdata-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.5", features = ["json"] }
dotenv = "0.15"
ethers = { version = "2.0", features = ["rustls"] }
eyre = "0.6"
log = "0.4"
log4rs = "1.2"
chrono = "0.4.38"
config = "0.14.0"
clap = { version = "4.5.11", features = ["derive"] }
sled = "0.34"
