[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"

[lib]
name = "fetcher"
path = "src/lib.rs"


[[bin]]
name = "centrifugo_push_http"
path = "src/bin/centrifugo_push_http.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15"
ethers = { version = "2.0", features = ["rustls"] }
eyre = "0.6"
log = "0.4"
log4rs = "1.2"
chrono = "0.4.38"
config = "0.14.0"
clap = { version = "4.5.11", features = ["derive"] }
sled = "0.34"
flate2 = "1.0.30"
scylla = "0.13.1"
anyhow = "1.0.86"
rust-s3 = "0.34.0"
bytes = "1.7.0"
cached = { version = "0.53.1", features = ["async"] }

rdkafka = { version = "0.36.2", features = ["cmake-build"] }
env_logger = "0.11.5"
bincode = "1.3.3"
ulid = { version = "1.1.3", features = ["serde"] }
url = "2.5"
crossbeam-channel = "0.5.13"
rustc-hash = "2.0.0"
memmap2 = "0.9.4"
flatbuffers = "24.3.25"
im = { version = "15.1.0", features = ["serde"] }
nix = { version = "0.29.0", features = ["process"] }
tikv-jemallocator = "0.6.0"
nohash-hasher = "0.2.0"
crc32fast = "1.3"
sha2 = "0.10"
hex = "0.4"
md5 = "0.7.0"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.9.2"
uuid = { version = "1.10.0", features = ["v4"] }
disruptor = "3.6.1"
validator = { version = "0.20.0", features = ["derive"] }
rust_decimal = { version = "1.36", features = ["serde"] }
zmq = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
csv = "1.4.0"
lz4_flex = "0.11"
indexmap = "2.12.1"

[build-dependencies]
flatc-rust = "0.2" # Helper to compile schema

[dev-dependencies]
tempfile = "3.23.0"
tower = { version = "0.5.2", features = ["util"] }
